2013-06-25
        * last changes broke code, should be better now

2013-06-24
        * removed bug that Hessian function was invoked
          even though use.hessian = FALSE.

2013-05-24
        * needs R (>= 2.14) same as RcppEigen
        * minor correction to bmpt.fia.Rd

2013-05-23
        * sfLibrary now called with only.character = TRUE 
		  (removes R CMD check NOTE).

2013-05-22
        * fixed line lengths in .Rd files

2013-05-17
        * updated documentation of fit.mpt (added 
          warning for possibly inconsistent FIA penalties)

2013-05-11
        * removed bug in make.mdt with data.frames
        
2013-05-09
        * added n.smaller.05 column to select.mpt
        * added note about factorial constant (fit.mpt, fit.model)

2013-05-07
        * multicore fitting now uses load balancing (fit.mptinr)

2013-04-01
        * FIA calculation can now use multicore (in bmpt.fia)
		* multicore FIA also available via get.mpt.fia, fit.mpt, 
		  and fit.model.
		
2013-02-24
        * FIA calculation uses RcppEigen (thanks to 
          Christian Mueller)

2013-02-15
        * added feature to specify lower and upper bound
          for starting values (must be two element list, 
          first is lower, second is upper).

2013-02-10
        * modifed documentation for FIA (extra brackets warning).
        
2013-02-02
        * aggrgeated G^2 only if output == "full"

2013-01-27
        * added CITATION file
        * added aggregated G^2 when output = "full" (select.mpt)

2012-09-14
		* resolved bug when using inequality and crossed equality
          restrictions (see bugs/resrictionsbug.order.R)

2012-09-03
		* select.mpt now shows g.square, df, and p
		* select.mpt has argument dataset
		
2012-08-30
		* added function plot.prediction.
		* added FIA.penalty to output with FIA.
		* removed bug when select.mpt from models with fit
		  fit.aggregated = FALSE

2012-07-24
		* make.mdt now uses dimnames(data)[[1]] as index (with warning).

2012-07-20