@@ -1,3 +1,8 @@
+2013-06-26
+        # added reasonable message when objective function failed.
+        * changed warnings to messages.
+        * now everything should work with Hessian (hopefully)
+
 2013-06-25
         * last changes broke code, should be better now
 
